SERVER-47581 Set 'useNewUpsert' on $mergeCursors aggregations

(cherry picked from commit dda2fb45cbf624c9270f8fad7f3c5c5a2f0834eb)